<resources>
    <string name="app_name">DiamondCastApp</string>
    <string name="login">Login</string>
    <string name="enter">Enter</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t Have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="edit_appt">Edit</string>
    <string name="delete_appt">Delete</string>
    <string name="email">Email:</string>
    <string name="passwordtext">Password:</string>
    <string name="change_phone">Change Phone Number</string>
    <string name="go_back">Go Back</string>
    <string name="next_page">Next Page</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="usernameText">Username:</string>
    <string name="accountTypeText">Choose your account type:</string>
    <string-array name="accountTypes">
        <item>Client</item>
        <item>Agent</item>
        <item>Contractor</item>
    </string-array>

    <string name="searching">SearchBar</string>
    <string-array name="search_bar_array">
        <item>Renovation</item>
        <item>Carpenter</item>
        <item>Electrician</item>
        <item>Painter</item>
        <item>Heating and Air Conditioning</item>
        <item>Masonry</item>
        <item>Roofer</item>
        <item>Landscaper</item>
        <item>Tile Setter</item>
        <item>Flooring</item>
        <item>Window Specialist</item>
        <item>Concrete Specialist</item>
    </string-array>
    <string name="title_activity_inbox">InboxActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- END -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Search">Search</string>
    <string name="Past_Appointments">Past Appointments</string>
    <string name="Upcoming_Appointments">Upcoming Appointments</string>
    <string name="Payment">Payment</string>
    <string name="Pay_now">Pay Now</string>
    <string name="description">Search</string>
    <string name="Home">Home</string>
    <string name="schedule_appointment">Schedule Appointment</string>
    <string name="view_cancellations">View Cancellations</string>
    <string name="choose_a_date">Choose a Date</string>
    <string name="textview">TextView</string>
    <string name="your_name">your name</string>
    <string name="address_of_service_location">Address of service location</string>
    <string name="contractor_name">Contractor name</string>
    <string name="client_name">Client Name</string>
    <string name="location_of_service">Location of Service</string>
    <string name="appointment_details_msg">Enter more information about your appointment</string>
    <string name="select_time">Select Time</string>
    <string name="emailVerify">YOUR EMAIL IS NOT VERIFIED</string>
    <string name="verify">VERIFY NOW</string>

    <string name="confirm_your_appointment">Confirm your appointment</string>
    <string name="confirm_appointment">Confirm Appointment</string>
    <string name="date_format_confirm">dd/MM/yy</string>
    <string name="default_display_appointment_with">appointment with this person</string>
    <string name="default_time_confirm">12:00</string>

    <string name="change_prof_pic">Change Profile Image</string>
    <string name="logout_btn">Logout</string>
    <string name="full_name">Full Name:</string>
    <string name="user_type_prof">User Type:</string>
    <string name="text_view">Your information</string>
    <string name="email_prof">Email:</string>
    <string name="your_profile">Your Profile</string>

    <string name="title_activity_navigation_menu">NavigationMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="search_here">Search here</string>

    <string name="what_services_will_you_require">What services will you require?</string>
    <string name="confirm_choices">Confirm choices</string>


    <string name="user_settings">User Settings</string>
    <string name="your_settings">Your Settings</string>
    <string name="change_password">Change Password</string>
    <string name="light_mode_dark_mode">Light Mode/Dark Mode</string>


    <string name="appointment_title">Appointment Title</string>
    <string name="date_homescreen">Date</string>

    <string name="default_string">default string</string>
    <string name="contractor_first_name">contractor first name</string>
    <string name="default_service_list">default service list</string>
    <string name="default_date_and_time_str_home_screen">date and time</string>
    <string name="default_home_screen_appt_service_str">services listed here</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="select_date">Select Date</string>
    <string name="change_contractor">Change Contractor</string>
    <string name="select_contractor">Select Contractor</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="messages">Messages</string>
    <string name="diamondcast_app">DIAMONDCAST APP</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map">Map</string>
    <string name="title_activity_search_agent_adapter">SearchAgentAdapter</string>
    <string name="search_for_contractors">Contractors</string>
    <string name="choose_an_agent">Choose an Agent</string>
    <string name="choose_a_contractor">Choose a Contractor</string>
    <string name="search_for_agents">Agents</string>
    <string name="change_contractor_agent">Change Contractor/Agent</string>

    <string name="choose_one_or_more_services">Choose one or more services</string>
    <string name="choose_contractor_agent">Choose Contractor/Agent</string>

    <string name="location">Location:</string>
    <string name="update_location">Update Location</string>
    <string name="none">None</string>


</resources>