<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/Home"/>
        <item android:id="@+id/nav_search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/search"/>
        <item android:id="@+id/nav_appointment"
            android:icon="@drawable/ic_baseline_calendar_month_24"
            android:title="@string/schedule_appointment"/>
        <item android:id="@+id/nav_messaging"
            android:icon="@drawable/ic_baseline_message_24"
            android:title="@string/messages"/>
        <item android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile"/>
        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings"/>

    </group>
</menu>