<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppointmentConfirmationActivity">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="370dp"
        android:layout_height="291dp"
        android:layout_marginBottom="244dp"
        app:chipSpacingHorizontal="10dp"
        app:chipSpacingVertical="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displaySelectedContractorConfirm"
        app:layout_constraintVertical_bias="1.0">

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/ConfirmAppointmentTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="64dp"
        android:text="@string/confirm_your_appointment"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirm_appointment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="48dp"
        android:text="@string/confirm_appointment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/changeContractorButton"
        android:layout_width="323dp"
        android:layout_height="46dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displaySelectedContractorConfirm"
        android:text="@string/select_contractor"/>

    <Button
        android:id="@+id/chooseAppointmentTimeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="368dp"
        android:onClick="openTimePicker"
        android:text="@string/select_time"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displaySelectedContractorConfirm" />

    <Button
        android:id="@+id/chooseAppointmentDateButton"
        android:layout_width="245dp"
        android:layout_height="58dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="68dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/chooseAppointmentTimeButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/select_date"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:onClick="openDatePicker"
        style="?android:spinnerStyle"/>

    <TextView
        android:id="@+id/displaySelectedContractorConfirm"
        android:layout_width="329dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="64dp"
        android:text="@string/default_display_appointment_with"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ConfirmAppointmentTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>