<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppointmentSchedulerActivity">


    <Button
        android:id="@+id/chooseAppointmentTimeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:width="300dp"
        android:height="100dp"
        android:onClick="openTimePicker"
        android:text="@string/select_time"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar" />

    <CalendarView
        android:id="@+id/calendar"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/setDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="21dp"
        android:text="@string/choose_a_date"
        app:layout_constraintBottom_toTopOf="@+id/calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/previousPageScheduler"
        android:layout_width="101dp"
        android:layout_height="75dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="176dp"
        android:onClick="goToPreviousPage"
        android:text="@string/go_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar" />

    <TextView
        android:id="@+id/nextPageScheduler"
        android:layout_width="101dp"
        android:layout_height="75dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="40dp"
        android:onClick="goToNextSchedulingPage"
        android:text="@string/next_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar" />

</androidx.constraintlayout.widget.ConstraintLayout>